[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/start/starting.png" type="Texture" id=1]
[ext_resource path="res://Theme/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Startup.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 256, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 256, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "start",
"speed": 6.0
} ]

[node name="StartupScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 712.0
color = Color( 0.863281, 0.554836, 0.554836, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 248, 320 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
animation = "start"

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BaCaSoft" type="Label" parent="Control"]
margin_left = 96.0
margin_top = 120.0
margin_right = 224.0
margin_bottom = 160.0
rect_scale = Vector2( 2.48, 2.52 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BaCaSoft"

[node name="TimerAnim" type="Timer" parent="."]
autostart = true

[node name="TimerChange" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="TimerAnim" to="." method="_on_TimerAnim_timeout"]
[connection signal="timeout" from="TimerChange" to="." method="_on_TimerChange_timeout"]
